src/main/resources/grammar/cup.bnf
{
    parserClass="com.zeks.javacupcake.lang.parser.CupParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Cup"
    psiImplClassSuffix="Impl"
    psiPackage="com.zeks.javacupcake.lang.psi"
    psiImplPackage="com.zeks.javacupcake.lang.psi.impl"

    elementTypeHolderClass="com.zeks.javacupcake.lang.psi.CupTypes"
    elementTypeClass="com.zeks.javacupcake.lang.psi.util.CupElementType"
    tokenTypeClass="com.zeks.javacupcake.lang.psi.util.CupTokenType"

    extends(".*Line")="com.zeks.javacupcake.lang.psi.base.CupLine"

    extends("packageSpec")="com.zeks.javacupcake.lang.psi.elements.CupPackageSpecLine"
    extends("importStatement")="com.zeks.javacupcake.lang.psi.elements.CupImportStatementLine"
    extends("startDeclaration")="com.zeks.javacupcake.lang.psi.elements.CupStartLine"
    extends("precedenceDeclaration")="com.zeks.javacupcake.lang.psi.elements.CupPrecedenceDeclarationLine"
    extends("terminalDeclaration")="com.zeks.javacupcake.lang.psi.elements.CupTerminalDeclarationLine"
    extends("nonTerminalDeclaration")="com.zeks.javacupcake.lang.psi.elements.CupNonTerminalDeclarationLine"
    extends("production")="com.zeks.javacupcake.lang.psi.elements.CupProductionLine"
    stubClass("production")="com.zeks.javacupcake.lang.psi.stubs.CupProductionStub"
    elementTypeFactory("production")="com.zeks.javacupcake.lang.psi.stubs.CupProductionStubElementType.factory"
    extends("rightHandSide")="com.zeks.javacupcake.lang.psi.elements.CupRule"

    extends("actionCodePart")="com.zeks.javacupcake.lang.psi.elements.CupAction"
    extends("initCodePart")="com.zeks.javacupcake.lang.psi.elements.CupInit"
    extends("parserCodePart")="com.zeks.javacupcake.lang.psi.elements.CupParser"
    extends("scanCodePart")="com.zeks.javacupcake.lang.psi.elements.CupScan"

    extends("declaredTerminal")="com.zeks.javacupcake.lang.psi.elements.CupNamedTerminal"
    stubClass("declaredTerminal")="com.zeks.javacupcake.lang.psi.stubs.CupNamedTerminalStub"
    elementTypeFactory("declaredTerminal")="com.zeks.javacupcake.lang.psi.stubs.CupTerminalStubElementType.factory"
    extends("declaredNonTerminal")="com.zeks.javacupcake.lang.psi.elements.CupNamedNonTerminal"
    stubClass("declaredNonTerminal")="com.zeks.javacupcake.lang.psi.stubs.CupNamedNonTerminalStub"
    elementTypeFactory("declaredNonTerminal")="com.zeks.javacupcake.lang.psi.stubs.CupNonTerminalStubElementType.factory"
    extends("symbol")="com.zeks.javacupcake.lang.psi.elements.CupSymbolElement"
    implements("codeStringBlock")="com.intellij.psi.PsiLanguageInjectionHost"
    extends("codeStringBlock")="com.zeks.javacupcake.lang.psi.injection.CupCodeString"

    tokens=[
        WHITE_SPACE='regexp:\s+'
        COMMENT='comment'

        PACKAGE='package'
        IMPORT='import'
        CODE='code'
        ACTION='action'
        PARSER='parser'
        WITH='with'
        INIT='init'
        SCAN='scan'
        TERMINAL_='terminal'
        NON='non'
        NONTERMINAL='nonterminal'
        PRECEDENCE='precedence'
        LEFT='left'
        RIGHT='right'
        NONASSOC='nonassoc'
        START='start'
        PERCENT_PREC='%prec'

        DOT='.'
        ASTERISK='*'
        ASSIGN_OPERATOR='::='
        BAR='|'
        LPAREN='('
        RPAREN=')'
        LBRACKET='['
        RBRACKET=']'
        COMMA=','
        COLON=':'
        SEMICOLON=';'

        IDENTIFIER='regexp:[a-zA-Z][a-zA-Z0-9_]*'

        OPEN_CODE_STRING='{:'
        CLOSE_CODE_STRING=':}'
    ]
}

file ::= line*
private line ::= packageSpec | importStatements | codeParts | symbolDeclaration | precedenceDeclaration | startDeclarationLine | production { pin=1 recoverWhile=line_recovery }
private line_recovery ::= !(PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)


packageSpec ::= PACKAGE packageName SEMICOLON { pin=1 }

// imports are grouped for easier folding
importStatements ::= importStatement+
importStatement ::= IMPORT importName SEMICOLON { pin=1 }


private codeParts ::= (actionCodePart | parserCodePart | initCodePart | scanCodePart)
actionCodePart ::= actionCode codeStringBlock optionalSemicolon? { pin=1 }
private actionCode ::= ACTION CODE { pin=1 recoverWhile=codePartRecovery }
parserCodePart ::= parserCode codeStringBlock optionalSemicolon? { pin=1 }
private parserCode ::= PARSER CODE { pin=1 recoverWhile=codePartRecovery }
initCodePart ::= initWith codeStringBlock optionalSemicolon? { pin=1 }
private initWith ::= INIT WITH { pin=1 recoverWhile=codePartRecovery }
scanCodePart ::= scanWith codeStringBlock optionalSemicolon? { pin=1 }
private scanWith ::= SCAN WITH { pin=1 recoverWhile=codePartRecovery }

private codePartRecovery ::= !(codeStringBlock | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)


private symbolDeclaration ::= (terminalDeclaration | nonTerminalDeclaration)
terminalDeclaration ::= TERMINAL_ (typeName declaredTerminal (COMMA declaredTerminal)* | declaredTerminal (COMMA declaredTerminal)*) SEMICOLON {
    recoverWhile=symbolDeclaration_recovery
    pin=1
}
nonTerminalDeclaration ::= (nonTerminalAlternative | NONTERMINAL) (typeName declaredNonTerminal (COMMA declaredNonTerminal)* | declaredNonTerminal (COMMA declaredNonTerminal)*) SEMICOLON {
    recoverWhile=symbolDeclaration_recovery
    pin=1
}
nonTerminalAlternative ::= NON TERMINAL_ { pin=1 }
private symbolDeclaration_recovery ::= !(IDENTIFIER | COMMA | SEMICOLON | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)


precedenceDeclaration ::= precedence precedenceSymbol (COMMA precedenceSymbol)* SEMICOLON { pin=1 }
private precedence ::= PRECEDENCE precedenceType { pin=1 recoverWhile=precedenceDeclaration_recovery }
precedenceType ::= LEFT | RIGHT | NONASSOC
precedenceSymbol ::= symbol { pin=1 recoverWhile=list_recovery }
private precedenceDeclaration_recovery ::= !(IDENTIFIER | COMMA | SEMICOLON | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)


private list_recovery ::= !(COMMA | SEMICOLON | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)


private startDeclarationLine ::= startDeclaration
startDeclaration ::= startWith symbol SEMICOLON { pin=1 }
private startWith ::= START WITH { pin=1 recoverWhile=startWith_recovery}
private startWith_recovery ::= !(IDENTIFIER | SEMICOLON | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)


production ::= symbol assign (rightHandSide (BAR rightHandSide)*)? SEMICOLON { pin=1 }
assign ::= ASSIGN_OPERATOR
rightHandSide ::= (LPAREN className RPAREN)? (symbol (COLON label)? | codeStringBlock)* precedenceClause? { recoverWhile=rightHandSide_recovery }
precedenceClause ::= PERCENT_PREC symbol
private rightHandSide_recovery ::= !(BAR | SEMICOLON)


codeStringBlock ::= OPEN_CODE_STRING CODE_STRING* CLOSE_CODE_STRING


packageName ::= IDENTIFIER (DOT IDENTIFIER)*
importName ::= IDENTIFIER (DOT IDENTIFIER)* (DOT ASTERISK)?
typeName ::= IDENTIFIER (DOT IDENTIFIER)* (LBRACKET RBRACKET)?
className ::= IDENTIFIER
label ::= IDENTIFIER
symbol ::= IDENTIFIER
declaredTerminal ::= IDENTIFIER {
    pin=1
    recoverWhile=list_recovery
}
declaredNonTerminal ::= IDENTIFIER {
    pin=1
    recoverWhile=list_recovery
}


optionalSemicolon ::= SEMICOLON
