src/main/gen/com/zeks/javacupcake/lang/parser/CupParser.java
// This is a generated file. Not intended for manual editing.
package com.zeks.javacupcake.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.zeks.javacupcake.lang.psi.CupTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class CupParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  /* ********************************************************** */
  // ACTION CODE
  static boolean actionCode(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionCode")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, ACTION, CODE);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, CupParser::codePartRecovery);
    return r || p;
  }

  /* ********************************************************** */
  // actionCode codeStringBlock optionalSemicolon?
  public static boolean actionCodePart(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionCodePart")) return false;
    if (!nextTokenIs(b, ACTION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ACTION_CODE_PART, null);
    r = actionCode(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, codeStringBlock(b, l + 1));
    r = p && actionCodePart_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // optionalSemicolon?
  private static boolean actionCodePart_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "actionCodePart_2")) return false;
    optionalSemicolon(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // ASSIGN_OPERATOR
  public static boolean assign(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assign")) return false;
    if (!nextTokenIs(b, ASSIGN_OPERATOR)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSIGN_OPERATOR);
    exit_section_(b, m, ASSIGN, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean className(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "className")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CLASS_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // !(codeStringBlock | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)
  static boolean codePartRecovery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codePartRecovery")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !codePartRecovery_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // codeStringBlock | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR
  private static boolean codePartRecovery_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codePartRecovery_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = codeStringBlock(b, l + 1);
    if (!r) r = consumeToken(b, PACKAGE);
    if (!r) r = consumeToken(b, IMPORT);
    if (!r) r = consumeToken(b, ACTION);
    if (!r) r = consumeToken(b, PARSER);
    if (!r) r = consumeToken(b, INIT);
    if (!r) r = consumeToken(b, SCAN);
    if (!r) r = consumeToken(b, TERMINAL_);
    if (!r) r = consumeToken(b, NON);
    if (!r) r = consumeToken(b, NONTERMINAL);
    if (!r) r = consumeToken(b, PRECEDENCE);
    if (!r) r = consumeToken(b, START);
    if (!r) r = parseTokens(b, 0, IDENTIFIER, ASSIGN_OPERATOR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // actionCodePart | parserCodePart | initCodePart | scanCodePart
  static boolean codeParts(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codeParts")) return false;
    boolean r;
    r = actionCodePart(b, l + 1);
    if (!r) r = parserCodePart(b, l + 1);
    if (!r) r = initCodePart(b, l + 1);
    if (!r) r = scanCodePart(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // OPEN_CODE_STRING CODE_STRING* CLOSE_CODE_STRING
  public static boolean codeStringBlock(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codeStringBlock")) return false;
    if (!nextTokenIs(b, OPEN_CODE_STRING)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, OPEN_CODE_STRING);
    r = r && codeStringBlock_1(b, l + 1);
    r = r && consumeToken(b, CLOSE_CODE_STRING);
    exit_section_(b, m, CODE_STRING_BLOCK, r);
    return r;
  }

  // CODE_STRING*
  private static boolean codeStringBlock_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "codeStringBlock_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, CODE_STRING)) break;
      if (!empty_element_parsed_guard_(b, "codeStringBlock_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean declaredNonTerminal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaredNonTerminal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECLARED_NON_TERMINAL, "<declared non terminal>");
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, CupParser::list_recovery);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean declaredTerminal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaredTerminal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECLARED_TERMINAL, "<declared terminal>");
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, CupParser::list_recovery);
    return r;
  }

  /* ********************************************************** */
  // line*
  static boolean file(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "file")) return false;
    while (true) {
      int c = current_position_(b);
      if (!line(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "file", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER (DOT IDENTIFIER)* (DOT ASTERISK)?
  public static boolean importName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && importName_1(b, l + 1);
    r = r && importName_2(b, l + 1);
    exit_section_(b, m, IMPORT_NAME, r);
    return r;
  }

  // (DOT IDENTIFIER)*
  private static boolean importName_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importName_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!importName_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "importName_1", c)) break;
    }
    return true;
  }

  // DOT IDENTIFIER
  private static boolean importName_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importName_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  // (DOT ASTERISK)?
  private static boolean importName_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importName_2")) return false;
    importName_2_0(b, l + 1);
    return true;
  }

  // DOT ASTERISK
  private static boolean importName_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importName_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, ASTERISK);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IMPORT importName SEMICOLON
  public static boolean importStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement")) return false;
    if (!nextTokenIs(b, IMPORT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, IMPORT_STATEMENT, null);
    r = consumeToken(b, IMPORT);
    p = r; // pin = 1
    r = r && report_error_(b, importName(b, l + 1));
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // importStatement+
  public static boolean importStatements(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatements")) return false;
    if (!nextTokenIs(b, IMPORT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = importStatement(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!importStatement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "importStatements", c)) break;
    }
    exit_section_(b, m, IMPORT_STATEMENTS, r);
    return r;
  }

  /* ********************************************************** */
  // initWith codeStringBlock optionalSemicolon?
  public static boolean initCodePart(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "initCodePart")) return false;
    if (!nextTokenIs(b, INIT)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, INIT_CODE_PART, null);
    r = initWith(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, codeStringBlock(b, l + 1));
    r = p && initCodePart_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // optionalSemicolon?
  private static boolean initCodePart_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "initCodePart_2")) return false;
    optionalSemicolon(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // INIT WITH
  static boolean initWith(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "initWith")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, INIT, WITH);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, CupParser::codePartRecovery);
    return r || p;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean label(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "label")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, LABEL, r);
    return r;
  }

  /* ********************************************************** */
  // packageSpec | importStatements | codeParts | symbolDeclaration | precedenceDeclaration | startDeclarationLine | production
  static boolean line(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "line")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_);
    r = packageSpec(b, l + 1);
    if (!r) r = importStatements(b, l + 1);
    if (!r) r = codeParts(b, l + 1);
    if (!r) r = symbolDeclaration(b, l + 1);
    if (!r) r = precedenceDeclaration(b, l + 1);
    if (!r) r = startDeclarationLine(b, l + 1);
    if (!r) r = production(b, l + 1);
    exit_section_(b, l, m, r, false, CupParser::line_recovery);
    return r;
  }

  /* ********************************************************** */
  // !(PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)
  static boolean line_recovery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "line_recovery")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !line_recovery_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR
  private static boolean line_recovery_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "line_recovery_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PACKAGE);
    if (!r) r = consumeToken(b, IMPORT);
    if (!r) r = consumeToken(b, ACTION);
    if (!r) r = consumeToken(b, PARSER);
    if (!r) r = consumeToken(b, INIT);
    if (!r) r = consumeToken(b, SCAN);
    if (!r) r = consumeToken(b, TERMINAL_);
    if (!r) r = consumeToken(b, NON);
    if (!r) r = consumeToken(b, NONTERMINAL);
    if (!r) r = consumeToken(b, PRECEDENCE);
    if (!r) r = consumeToken(b, START);
    if (!r) r = parseTokens(b, 0, IDENTIFIER, ASSIGN_OPERATOR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // !(COMMA | SEMICOLON | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR)
  static boolean list_recovery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "list_recovery")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !list_recovery_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // COMMA | SEMICOLON | PACKAGE | IMPORT | ACTION | PARSER | INIT | SCAN | TERMINAL_ | NON | NONTERMINAL | PRECEDENCE | START | IDENTIFIER ASSIGN_OPERATOR
  private static boolean list_recovery_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "list_recovery_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, PACKAGE);
    if (!r) r = consumeToken(b, IMPORT);
    if (!r) r = consumeToken(b, ACTION);
    if (!r) r = consumeToken(b, PARSER);
    if (!r) r = consumeToken(b, INIT);
    if (!r) r = consumeToken(b, SCAN);
    if (!r) r = consumeToken(b, TERMINAL_);
    if (!r) r = consumeToken(b, NON);
    if (!r) r = consumeToken(b, NONTERMINAL);
    if (!r) r = consumeToken(b, PRECEDENCE);
    if (!r) r = consumeToken(b, START);
    if (!r) r = parseTokens(b, 0, IDENTIFIER, ASSIGN_OPERATOR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // NON TERMINAL_
  public static boolean nonTerminalAlternative(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalAlternative")) return false;
    if (!nextTokenIs(b, NON)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, NON_TERMINAL_ALTERNATIVE, null);
    r = consumeTokens(b, 1, NON, TERMINAL_);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // (nonTerminalAlternative | NONTERMINAL) (typeName declaredNonTerminal (COMMA declaredNonTerminal)* | declaredNonTerminal (COMMA declaredNonTerminal)*) SEMICOLON
  public static boolean nonTerminalDeclaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, NON_TERMINAL_DECLARATION, "<non terminal declaration>");
    r = nonTerminalDeclaration_0(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, nonTerminalDeclaration_1(b, l + 1));
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, CupParser::symbolDeclaration_recovery);
    return r || p;
  }

  // nonTerminalAlternative | NONTERMINAL
  private static boolean nonTerminalDeclaration_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration_0")) return false;
    boolean r;
    r = nonTerminalAlternative(b, l + 1);
    if (!r) r = consumeToken(b, NONTERMINAL);
    return r;
  }

  // typeName declaredNonTerminal (COMMA declaredNonTerminal)* | declaredNonTerminal (COMMA declaredNonTerminal)*
  private static boolean nonTerminalDeclaration_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = nonTerminalDeclaration_1_0(b, l + 1);
    if (!r) r = nonTerminalDeclaration_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // typeName declaredNonTerminal (COMMA declaredNonTerminal)*
  private static boolean nonTerminalDeclaration_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = typeName(b, l + 1);
    r = r && declaredNonTerminal(b, l + 1);
    r = r && nonTerminalDeclaration_1_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA declaredNonTerminal)*
  private static boolean nonTerminalDeclaration_1_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration_1_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!nonTerminalDeclaration_1_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "nonTerminalDeclaration_1_0_2", c)) break;
    }
    return true;
  }

  // COMMA declaredNonTerminal
  private static boolean nonTerminalDeclaration_1_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration_1_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && declaredNonTerminal(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // declaredNonTerminal (COMMA declaredNonTerminal)*
  private static boolean nonTerminalDeclaration_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = declaredNonTerminal(b, l + 1);
    r = r && nonTerminalDeclaration_1_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA declaredNonTerminal)*
  private static boolean nonTerminalDeclaration_1_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration_1_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!nonTerminalDeclaration_1_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "nonTerminalDeclaration_1_1_1", c)) break;
    }
    return true;
  }

  // COMMA declaredNonTerminal
  private static boolean nonTerminalDeclaration_1_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "nonTerminalDeclaration_1_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && declaredNonTerminal(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // SEMICOLON
  public static boolean optionalSemicolon(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "optionalSemicolon")) return false;
    if (!nextTokenIs(b, SEMICOLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SEMICOLON);
    exit_section_(b, m, OPTIONAL_SEMICOLON, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER (DOT IDENTIFIER)*
  public static boolean packageName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "packageName")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    r = r && packageName_1(b, l + 1);
    exit_section_(b, m, PACKAGE_NAME, r);
    return r;
  }

  // (DOT IDENTIFIER)*
  private static boolean packageName_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "packageName_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!packageName_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "packageName_1", c)) break;
    }
    return true;
  }

  // DOT IDENTIFIER
  private static boolean packageName_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "packageName_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PACKAGE packageName SEMICOLON
  public static boolean packageSpec(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "packageSpec")) return false;
    if (!nextTokenIs(b, PACKAGE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, PACKAGE_SPEC, null);
    r = consumeToken(b, PACKAGE);
    p = r; // pin = 1
    r = r && report_error_(b, packageName(b, l + 1));
    r = p && consumeToken(b, SEMICOLON) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // PARSER CODE
  static boolean parserCode(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "parserCode")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeTokens(b, 1, PARSER, CODE);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, CupParser::codePartRecovery);
    return r || p;
  }
